envoy/envoy_router.yaml
static_resources:
  listeners:
  - name: listener_proxy
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8090
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http_api
          route_config:
            name: routes
            virtual_hosts:
            - name: hosts
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                  headers: 
                    name: content-type
                    exact_match: application/grpc-web-text
                route:
                  cluster: grpc_backend
              - match:
                  prefix: /
                route:
                  cluster: static_site
          http_filters:
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.router

  clusters:
  - name: static_site
    connect_timeout: 0.250s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: static_site
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: static_site
                port_value: 10100

  - name: grpc_backend
    connect_timeout: 0.250s
    type: STRICT_DNS
    http2_protocol_options: {}
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: grpc_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: grpc_backend
                port_value: 9090
