envoy/envoy_static.yaml
static_resources:
  listeners:
  - name: listener_proxy
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8100
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http_static
          route_config:
            name: route_to_static_site
            virtual_hosts:
            - name: static_site_hosts
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                route:
                  cluster: static_site
          http_filters:
          - name: envoy.filters.http.oauth2
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3alpha.OAuth2
              config:
                token_endpoint:
                  cluster: google-oauth2-token
                  uri: https://oauth2.googleapis.com/token
                  timeout: 3s
                authorization_endpoint: https://accounts.google.com/o/oauth2/v2/auth
                redirect_uri: http://localhost:8080/oauth2/callback
                redirect_path_matcher:
                  path:
                    exact: /oauth2/callback
                signout_path:
                  path:
                    exact: /oauth2/signout
                credentials:
                  client_id: "424578324323-b957ap0ablqq8ag02bpdng2rtnu3k7kq.apps.googleusercontent.com"
                  token_secret:
                    name: token
                    sds_config:
                      path: "/etc/envoy/token-secret.yaml"
                  hmac_secret:
                    name: hmac
                    sds_config:
                      path: "/etc/envoy/hmac-secret.yaml"
                pass_through_matcher:

                forward_bearer_token: true
                # Cf. https://github.com/envoyproxy/envoy/pull/14168
                auth_scopes:
                  - openid
                  - profile  
          - name: envoy.filters.http.router  
  clusters:
  - name: google-oauth2-token
    connect_timeout: 0.487s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: google-oauth2-token
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: oauth2.googleapis.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: oauth2.googleapis.com

  - name: static_site
    connect_timeout: 0.250s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: static_site
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: static_site
                port_value: 10100
